Fix overflow hiding stream switcher list
Safari (and, according to the internet, possibly Opera) doesn't let
the switcher break out of the overflow: hidden used to hide the
blurred show image. To fix, the overflow property has been transferred
to a child div which now houses the image.

--- a/src/css/components/Player.css
+++ b/src/css/components/Player.css
@@ -8,7 +8,6 @@
   color: #ffffff;
   box-shadow: 0 0 16px 0 rgba(30, 30, 30, 0.3);
   z-index: var(--layer-player);
-  overflow: hidden;
 
   &__audio {
     width: 100%;
@@ -28,6 +27,13 @@
     align-content: center;
     align-items: center;
     z-index: 1;
+  }
+
+  &__img-container {
+    position: absolute;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
   }
 
    &__img-back {
